# VitrineSIAA

./: .env  .env.example  .gitignore  Dockerfile  ESTRATEGIA_CONTEUDO.md  README.md  atualizaGit.bat  db_siaa.sqlite  docker-compose.yml  index.html  iniciar_siaa.bat  iniciar_sistema.bat  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scratch_test_firebase.py  siaa_session.session  siaa_session.session-journal  test_db_siaa.sqlite  theme.json  tsconfig.json
Nova pasta/: siaa_data_flow.md  siaa_feature_matrix.md  siaa_mindmap.md  siaa_progress_map.md
app/: webhook_server.py
app/api/: __init__.py
app/core/: database.py  downloader.py  health_check.py  hook_generator.py  logger.py  repository.py  scheduler_engine.py  shopee_api.py  telegram_logs.py
app/dashboard/: __init__.py  app.py  dashboard.py  pro_dashboard.html  studio_helpers.py
app/jobs/: cron_jobs.py
app/mineracao/: __init__.py  branding.py  crawler_telegram.py  crawler_whatsapp.py  editor_ia.py  grouper.py  hook_generator.py  shopee_scraper.py  (+1 more)
backend/: index.html  main.py  main_launcher.py  requirements.txt
frontend/: package-lock.json  package.json
logs/: siaa_structured.json
scripts/: cleanup_siaa.py  debug_video.py
server/: firebase-blueprint.json  firestore.rules  server.ts
siaa-2026---o-cérebro-do-marketing-de-afiliados/: index.html
siaa_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tmp/: README.txt  check_id_v2.py  check_ig_id.py  check_me.py  check_meta_token.py  check_permissions.py  meta_diagnostic.py
vitrine/: index.html  style.css
(+53 files in other folders)
