[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "siaa-2026"
version = "0.1.0"
description = "Sistema Inteligente de Automação de Afiliados"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
